[gd_scene load_steps=3 format=3 uid="uid://xkylw7qtwt1c"]

[ext_resource type="PackedScene" uid="uid://cy4j0l5tttmtq" path="res://scene_composition/composited_scene.tscn" id="1_3wogf"]
[ext_resource type="Script" uid="uid://d3lj4q3p4ysp8" path="res://scene_composition/composition_editor.gd" id="2_cg9m3"]

[node name="CompositionEditor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_cg9m3")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="Sidebar" type="VBoxContainer" parent="HSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="LayersLabel" type="Label" parent="HSplitContainer/Sidebar"]
layout_mode = 2
text = "Layers"

[node name="LayerList" type="ItemList" parent="HSplitContainer/Sidebar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="DepthLabel" type="Label" parent="HSplitContainer/Sidebar"]
layout_mode = 2
text = "Depth"

[node name="DepthSlider" type="HSlider" parent="HSplitContainer/Sidebar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 3.0
step = 0.01

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer/AspectRatioContainer"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/AspectRatioContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(648, 648)
render_target_update_mode = 4

[node name="CompositedScene" parent="HSplitContainer/AspectRatioContainer/SubViewportContainer/SubViewport" instance=ExtResource("1_3wogf")]
unique_name_in_owner = true
